# raft-consensus

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: README.md  kv_store.rs  single_node.rs  three_node_cluster.rs
src/: error.rs  lib.rs  raft_node.rs  rpc.rs  state.rs  state_machine.rs
