[package]
name = "raft-consensus"
version = "0.1.0"
authors = ["Mason Hall <hall.mason.a@proton.me>"]
description = "An implementation of the raft protocol"
license = "MIT"
edition = "2024"

[dependencies]
rand = "0.9.2"
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
bincode = { version = "2.0.1"}
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
