[package]
name = "raft-consensus"
version = "0.1.0"
authors = ["Mason Hall <hall.mason.a@proton.me>"]
description = "An implementation of the raft consensus algorithm"
license = "MIT"
edition = "2024"

[dependencies]
rand = "0.9.2"
thiserror = "2.0.17"
tracing = "0.1.41"
bincode = "2.0.1"
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = {version = "1", features = ["test-util", "time", "macros","rt"]}
